2009-02-26 1.2 alpha 2 Release

           o (Issue 1) fix bug where batch of logged SQL wasn't cleared
             properly when using batched SQL.

           o Added log4jdbc.statement.warn system property; defaults to false.

             This is a new option to control the SQL Statement warnings in the
             log.  When Statement objects are used by the application, the SQL
             in the log is preceded by "{WARNING: Statement used to run SQL}"
             This was always on in previous releases.  Now it
             is off by default, and can be turned on by setting this property.

           o (Issue 2) add getter methods across the board for the real
             wrapped object.

2008-11-08 1.2 alpha 1 Release

           o added a new logger "jdbc.connection" to dump connection open and
             close events as well as dumping all open connection numbers.  This
             is very useful for hunting down connection leak problems.

           o several new options to produce better SQL output:

             log4jdbc.dump.booleanastruefalse - many RDBMS's don't have a
             native boolean type and store booleans as a 1 or 0.  Setting this
             option to false will show boolean bind variables as 1 or 0.
             Setting this to true will show the boolean as true or false.
             (Note that the default for this setting is false, contrary to the
             previous way log4jdbc worked.)

             log4jdbc.dump.sql.maxlinelength - can be used to insert line
             breaks into long running SQL (at white space positions.)
             previous versions of log4jdbc did this automatically with a value
             of 90 (the default value is 90.)  This line breaking can be turned
             off completely by setting this to 0.

             log4jdbc.dump.fulldebugstacktrace - can be used in extreme
             debugging circumstances when you want to be able to see the full